Refatora código Adiciona captura de erro HTML

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -17,25 +17,9 @@
         <url-pattern>/menujsp.jsp</url-pattern>
     </filter-mapping>
     <servlet>
-        <servlet-name>mata</servlet-name>
-        <servlet-class>mata</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>menu</servlet-name>
-        <servlet-class>menu</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>Controller</servlet-name>
         <servlet-class>Controller</servlet-class>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>mata</servlet-name>
-        <url-pattern>/mata</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>menu</servlet-name>
-        <url-pattern>/menu</url-pattern>
-    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
@@ -51,6 +35,10 @@
     </error-page>
     <error-page>
         <exception-type>javax.servlet.ServletException</exception-type>
+        <location>/erro.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
         <location>/erro.jsp</location>
     </error-page>
 </web-app>
