Implementa padrão de projeto DAO para acesso e controle de dados Refatora código

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,15 +10,19 @@
     </context-param>
     <filter>
         <filter-name>filtro1</filter-name>
-        <filter-class>filtro1</filter-class>
+        <filter-class>control.filtro1</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>filtro1</filter-name>
         <url-pattern>/menujsp.jsp</url-pattern>
     </filter-mapping>
+    <listener>
+        <description>ServletContextListener, HttpSessionListener, HttpSessionAttributeListener</description>
+        <listener-class>control.NewServletListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>Controller</servlet-name>
-        <servlet-class>Controller</servlet-class>
+        <servlet-class>control.Controller</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
